design changes and bug fix to schedule
Also added in a custom scrollbar. I don't know whether we should keep it or not, just let me know.

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,17 @@ a, a:visited, a:link {
 
 th, td {
     color: #000;
-    border-top: 1px #000 solid;
-    padding: 15px;
-    text-align: center;
+    padding: 10px;
     font-size: 18px;
     vertical-align: middle;
+}
+
+.sat-time, .sun-time, .th-time {
+    text-align: right;
+}
+
+.sat-event, .sun-event, .th-event {
+    text-align: left;
 }
 
 .top-header:hover {
@@ -165,6 +171,7 @@ section {
     font-size: 16px;
     background: #a6a6a6;
     border: 2px solid #a6a6a6;
+    border-radius: 15px;
     color: white;
 }
 
@@ -180,12 +187,37 @@ section {
 #schedule-section .fa-arrow-circle-left, #schedule-section .fa-arrow-circle-right {
     border: none;
     background: transparent;
-    font-size: 30px;
+    font-size: 35px;
     outline: none;
+    margin: 30px 0;
+}
+
+#schedule-section .fa-arrow-circle-left:hover, #schedule-section .fa-arrow-circle-right:hover {
+    color: #FD9845;
 }
 
 #schedule-section #time, #schedule-section #location {
     text-align: left;
+}
+
+#scheduleSat {
+    max-height: 550px;
+    overflow-y: auto;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background : #FD9845;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background : rgba(255,255,255,0.5);
+  border-radius: 10px;
+  box-shadow:  0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 #schedule-section .active {
@@ -195,7 +227,7 @@ section {
 #schedule-section h2 {
     text-align: center;
     font-size: 30px;
-    margin: 30px 0;
+    margin-bottom: 30px;
 }
 
 #schedule-section p {
@@ -274,7 +306,11 @@ footer {
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+     #scheduleSat {
+        max-height: none;
+        overflow-y: auto;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
